--- a/package.json
+++ b/package.json
@@ -22,8 +22,16 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@next/bundle-analyzer": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "babel-plugin-transform-define": "^1.3.1",
     "cross-env": "^5.2.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "prettier-eslint": "^8.8.2",
     "rimraf": "^2.6.3",
     "typescript": "^3.4.5"
   }
