--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^8.1.0",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "next": "^8.1.0",
     "react": "^16.8.6",
@@ -21,7 +23,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@next/bundle-analyzer": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "babel-plugin-transform-define": "^1.3.1",
